--- a/setup/landing-page-setup.mdx
+++ b/setup/landing-page-setup.mdx
@@ -1,6 +1,45 @@
 ---
-title: Landing page setup
-description: Configure the public landing page content.
+title: Landing Page Setup
+description: Configure the public landing page content and layout.
 ---
 
-Update the landing page sections, branding, and calls to action.
+Our application comes with a highly customizable landing page. As an administrator, you can control the content, branding, and layout of the public-facing site.
+
+### Accessing Landing Page Settings
+
+To configure your landing page, you must be logged in as an **administrator**.
+
+1.  Navigate to **Settings** in the main sidebar.
+2.  Go to **Admin** > **Landing**.
+
+### General Settings
+
+- **Enable Landing Page**: Toggle this on to show the landing page to visitors. When disabled, all visitors will be automatically redirected to the login page.
+
+### Header / Hero Section
+
+This section is the first thing visitors see.
+
+- **Title**: The main headline (e.g., `Grow Organic Traffic on Auto-Pilot`).
+- **Subtitle**: A secondary headline (e.g., `Get done-for-you Blog Posts that actually rank.`).
+- **Description**: A detailed explanation of your service.
+- **Call-to-Action Link**: The destination URL for the main button (e.g., `/login`).
+- **YouTube Video URL**: Optional link to a demo video (e.g., `https://www.youtube.com/watch?v=nFGnWc4s7qU`).
+
+### Layout & Design
+
+- **Layout**: Choose your preferred layout style (e.g., `Layout 1 - Image Right`).
+- **Gradient Background**: Customize the hero section's background gradient using the following controls:
+    - **From color**: The starting color of the gradient.
+    - **From stop**: The percentage where the first color ends (e.g., `28%`).
+    - **Via color**: An optional middle color.
+    - **Via stop**: The percentage for the middle color (e.g., `70%`).
+    - **To color**: The ending color of the gradient.
+
+### Footer
+
+- **Footer Text**: The copyright or informational text at the bottom of the page (e.g., `© 2026 SuperSaas. All rights reserved.`).
+
+### Saving Changes
+
+Click **Save Settings** at the bottom of the page to apply your changes instantly to the public landing page.
